--- a/templates/index.html
+++ b/templates/index.html
@@ -143,21 +143,6 @@
               {%for post in all_posts.list%}
               <li data-id="3852">
                 <div class="DiscussionListItem">
-                  <div class="ButtonGroup Dropdown dropdown DiscussionListItem-controls itemCount1">
-                    <button class="Dropdown-toggle Button Button--icon Button--flat Slidable-underneath Slidable-underneath--right" data-toggle="dropdown">
-                      <i class="icon fa fa-fw fa-ellipsis-v Button-icon"></i>
-                      <span class="Button-label"></span>
-                      <i class="icon fa fa-fw fa-caret-down Button-caret"></i>
-                    </button>
-                    <ul class="Dropdown-menu dropdown-menu ">
-                      <li class="item-subscription">
-                        <button class=" hasIcon" type="button" title="Follow">
-                          <i class="icon fa fa-fw fa-star Button-icon"></i>
-                          <span class="Button-label">Follow</span>
-                        </button>
-                      </li>
-                    </ul>
-                  </div>
                   <a class="Slidable-underneath Slidable-underneath--left Slidable-underneath--elastic">
                     <i class="icon fa fa-fw fa-check "></i>
                   </a>
@@ -174,17 +159,17 @@
                       <ul class="DiscussionListItem-info">
                         <li class="item-tags">
                           <span class="TagsLabel ">
-                            <span class="TagLabel  colored" style="color: rgb(75, 147, 209); background-color: rgb(75, 147, 209);">
-                              <span class="TagLabel-text">Support</span>
+                            <span class="TagLabel  colored" style="color: #999; background-color: #f5f5f5;">
+                              <span class="TagLabel-text">君越2016款</span>
                             </span>
                           </span>
                         </li>
                         <li class="item-terminalPost">
                           <span>
                             <i class="icon fa fa-fw fa-reply "></i>
-                            <span class="username">MarekSchmidt</span>
-                            replied
-                            <time pubdate="true" datetime="2016-09-30T14:27:27+08:00" title="Friday, September 30, 2016 2:27 PM" data-humantime="true">11 minutes ago</time>
+                            <span class="username">Marek</span>
+                            最后回复于
+                            <time pubdate="true" datetime="2016-09-30T14:27:27+08:00" title="Friday, September 30, 2016 2:27 PM" data-humantime="true">11 分钟前</time>
                           </span>
                         </li>
                       </ul>
