--- a/templates/index.html
+++ b/templates/index.html
@@ -167,7 +167,7 @@
                         <li class="item-terminalPost">
                           <span>
                             <i class="icon fa fa-fw fa-reply "></i>
-                            <span class="username">Marek</span>
+                            <span class="username">{{post.last_reply_user}}</span>
                             最后回复于
                             <time pubdate="true" datetime="2016-09-30T14:27:27+08:00" title="Friday, September 30, 2016 2:27 PM" data-humantime="true">11 分钟前</time>
                           </span>
