--- a/static/css/main.css
+++ b/static/css/main.css
@@ -64,7 +64,25 @@ h2 {
 
 .DiscussionList-discussions .TagLabel {
     font-size: 10px;
-    font-weight: 100;
+    font-weight: normal;
     display: inline-block;
-    padding: .1em .5em;
+    padding: .0em .5em;
+}
+.DiscussionListItem-info > .item-tags {
+    opacity: 0.7;
+}
+
+@media (min-width: 768px) {
+    .DiscussionListItem-author .Avatar {
+    width: 48px;
+    height: 48px;
+    border-radius: 48px;
+    font-size: 24px;
+    line-height: 48px;
+}
+
+.DiscussionListItem-author {
+    margin-top: 10px;
+    margin-right: 8px;
+}
 }
