--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -29,8 +29,8 @@
         <p class="login-box-msg">{% if errors %}{{ errors }}{% else %}请输入管理员账号登录{% endif %}</p>
         <form action="/admin/signin" method="POST">
           <div class="form-group has-feedback">
-            <input type="mobile" name="mobile" class="form-control" placeholder="手机"/>
-            <span class="glyphicon glyphicon-phone form-control-feedback"></span>
+            <input type="email" name="email" class="form-control" placeholder="邮箱"/>
+            <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
           </div>
           <div class="form-group has-feedback">
             <input type="password" name="password" class="form-control" placeholder="密码"/>
