--- a/templates/post.html
+++ b/templates/post.html
@@ -73,16 +73,25 @@
                     <div class="Post-tags">
                       <span class="TagsLabel ">
                         <a class="TagLabel  colored" title="基于 Flarum 轻论坛的中文增强发行版，集成了一些比较实用的插件，使其更符合国内场景" href="/t/flarumone" style="color: rgb(239, 86, 79); background-color: rgb(239, 86, 79);">
-                          <span class="TagLabel-text">FlarumOne</span>
-                        </a>
-                        <a class="TagLabel  colored" title="" href="/t/help" style="color: rgb(96, 176, 173); background-color: rgb(96, 176, 173);">
-                          <span class="TagLabel-text">求助</span>
-                        </a>
+                          <span class="TagLabel-text">版块</span>
+                        </a><a class="TagLabel" title="" href="/t/help"><span class="TagLabel-text">大神经验分享</span></a>
+                      </span>
+                      <span class="TagsLabel ">
                         <a class="TagLabel  colored" title="" href="/t/fix" style="color: rgb(155, 193, 102); background-color: rgb(155, 193, 102);">
-                          <span class="TagLabel-text">已解决</span>
+                          <span class="TagLabel-text">车型</span>
+                        </a><a class="TagLabel" title="锁帖" href="/t/closed">
+                          <span class="TagLabel-text">君越16款</span>
                         </a>
-                        <a class="TagLabel  colored" title="锁帖" href="/t/closed" style="color: rgb(170, 171, 140); background-color: rgb(170, 171, 140);">
-                          <span class="TagLabel-text">已归档</span>
+                      </span>
+                      <span class="TagsLabel ">
+                        <a class="TagLabel  colored" title="" href="/t/fix" style="color: rgb(214, 139, 79); background-color: rgb(214, 139, 79);">
+                          <span class="TagLabel-text">标签</span>
+                        </a><a class="TagLabel" title="锁帖" href="/t/closed">
+                          <span class="TagLabel-text">上海通用</span>
+                        </a><a class="TagLabel" title="锁帖" href="/t/closed">
+                          <span class="TagLabel-text">别克</span>
+                        </a><a class="TagLabel" title="锁帖" href="/t/closed">
+                          <span class="TagLabel-text">全新君越</span>
                         </a>
                       </span>
                     </div>
